--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  margin: 20px auto;
+  max-width: 460px;
+  border: solid 1px #858585;
+  border-radius: 5px;
+  padding: 10px;
+  align-items: center;
+  background-color: #ececec;
+}
+
+.display {
+  width: 200px;
+  filter: drop-shadow(0 0 1px #3a3a3a);
+  font-size: 18px;
+  border-radius: 5px;
+}
+
+.buttons {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+button {
+  font-size: 18px;
+  padding: 2px;
+  margin: 2px;
+  min-width: 30px;
+  background-color: #cac9c9;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button.span2 {
+  grid-column: span 2;
+}
+
+button:active {
+  box-shadow: inset 1px 1px 3px #8f8f8f, inset -1px -1px 3px #9a9a9a;
+}
+
+footer {
+  margin-top: 20px;
 }
