--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,28 @@ main {
   background-color: #ececec;
 }
 
+.historic {
+  padding: 0 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  height: 100px;
+  overflow-y: scroll;
+  margin-bottom: 8px;
+  text-align: right;
+  background-color: #fff;
+  font-size: 18px;
+}
+
 .display {
   width: 100%;
   filter: drop-shadow(0 0 1px #3a3a3a);
   font-size: 18px;
   border-radius: 5px;
   padding: 8px;
+}
+
+.error {
+  color: red;
 }
 
 .buttons {
@@ -56,6 +72,10 @@ button.primary {
 
 button:active {
   box-shadow: inset 1px 1px 3px #8f8f8f, inset -1px -1px 3px #9a9a9a;
+}
+
+button.primary:active {
+  box-shadow: inset 1px 1px 3px #ececec, inset -1px -1px 3px #ececec;
 }
 
 footer {
